form positioning, mobile enhancements, fixed video display and alignment issues

--- a/styles.css
+++ b/styles.css
@@ -96,17 +96,17 @@ nav {
     margin-top: 1rem;
 }
 
+section {
+    max-width: 60vw;
+    margin: 0 auto;
+}
+
 .section-heading {
     font-family: Gupter, serif;
     font-size: 2rem;
     letter-spacing: 0.0325rem;
     color: var(--heading-color-dark);
-    padding: 1rem;
-}
-
-.product-info {
-    max-width: 60vw;
-    margin: 0 auto;
+    padding: 1rem 0;
 }
 
 .product-info ul {
@@ -134,20 +134,28 @@ nav {
     margin: 1rem;
 }
 
+.disclaimer {
+    font-style: italic;
+    font-weight: 500;
+}
+
 .how-it-works {
     display: flex;
     flex-direction: column;
+    align-content: center;
     max-width: 60vw;
     margin: 0 auto;
-    padding: 2rem 0;
 }
 
 .video-container {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     gap: 2;
     position: relative;
     padding-bottom: 56.25%;
+    z-index: -1;
 }
 
 iframe {
@@ -155,15 +163,39 @@ iframe {
     width: 100%;
     height: 100%;
     top: 0;
-    left: 0;
     flex-flow: column;
     max-width: 640px;
     max-height: 320px;
 }
 
-.disclaimer {
-    font-style: italic;
-    font-weight: 500;
+.form-container {
+    margin-bottom: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    width: 40vw;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1rem;
+}
+
+.signup-description {
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 600;
+    max-width: 600px;
+}
+
+form input {
+    margin: 0.75rem;
+    padding: 0.5rem;
+    width: 100%;
+    max-width: 300px;
 }
 
 /* TODO: animate using @keyframes slideshow {} ? */
@@ -191,6 +223,13 @@ iframe {
         padding-top: 1rem;
     }
 
+    .form-container {
+        width: 70vw;
+    }
+
+    form input {
+        padding: 1rem;
+    }
 }
 
 @media only screen and (max-width: 700px) {
@@ -201,5 +240,13 @@ iframe {
     .nav-list {
         font-size: 0.9rem;
         font-weight: 500;
+    }
+
+    .mobile-hide {
+        display: none;
+    }
+
+    .signup-description {
+        font-size: 1.5rem;
     }
 }
